--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,20 +3,18 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/spring
 spring.datasource.username=kata
 spring.datasource.password=kata
+spring.sql.init.mode=always
 
 # Hibernate
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
 spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.hbm2ddl.auto=validate
+spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
+spring.jpa.defer-datasource-initialization=true
 
 #spring.jpa.open-in-view=false
 
 # Http
 spring.mvc.hiddenmethod.filter.enabled=true
-
-#
-#spring.jpa.generate-ddl=false
-#spring.jpa.hibernate.ddl-auto = update
 
 #Logg
 #logging.level.org.springframework=debug
